# opencode-codebase-index

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  tsup.config.ts
.github/: release-drafter.yml
.github/workflows/: build.yml  release-drafter.yml  release-label-check.yml
benchmarks/baselines/: retrieval-baseline.json
commands/: call-graph.md
native/: Cargo.toml
native/queries/: go-calls.scm  python-calls.scm  rust-calls.scm  typescript-calls.scm
native/src/: call_extractor.rs  db.rs  lib.rs  parser.rs  types.rs
src/: git-cli.ts  hooks.ts  index.ts  mcp-server.ts
src/commands/: config-loader.ts  hooks-install.ts  incremental.ts  install.ts  query.ts
src/config/: schema.ts
src/git/: blobsha.ts
src/indexer/: delta.ts  index.ts
src/native/: index.ts
src/tools/: index.ts  utils.ts
src/utils/: files.ts
tests/: blobsha.test.ts  call-graph.test.ts  commands.test.ts  config-loader.test.ts  config.test.ts  git-cli.test.ts  hooks.test.ts  install.test.ts  mcp-server.test.ts  retrieval-benchmark.test.ts  retrieval-ranking.test.ts  search-integration.test.ts  tools-utils.test.ts
