[package]
name = "codebase-index-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Rust core for opencode-codebase-index: tree-sitter parsing and vector search"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi9", "async", "serde-json"] }
napi-derive = "2.16"

tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-json = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-language = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
walkdir = "2.5"
ignore = "0.4"
thiserror = "1.0"
anyhow = "1.0"
streaming-iterator = "0.1"
# On Linux/macOS: use default features (simsimd + fp16lib) for SIMD-accelerated vector ops
# On Windows: disable simsimd — MSVC lacks _mm512_reduce_add_ph intrinsic (usearch#325)
[target.'cfg(not(target_os = "windows"))'.dependencies]
usearch = "=2.23.0"
[target.'cfg(target_os = "windows")'.dependencies]
usearch = { version = "=2.23.0", default-features = false, features = ["fp16lib"] }

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.24.0"
